layout issues2

--- a/contactPage.css
+++ b/contactPage.css
@@ -7,7 +7,7 @@ html, body{
     position: relative;
     height: 100vh;
     overflow: hidden;
-    
+    display: flex;
     align-items: flex-end;
     justify-content: flex-start;
     color: #fff;
